style/style.css
/* Style for my personal page */

html {
    min-height: 100%;

    /* Color Vars */
    --dark-blue: #000040;
    --my-green: #138b38;
    --dark-teal: #008080;
}

@font-face {
    font-family: MesloLGS;
    src: url(./MesloLG/MesloLGS-Regular.ttf);
}

body {
    font-family: MesloLGS, "Helvetica Neue", sans-serif;
    font-size: large;
    background-color: black;
    color: #bbb;
    margin: 0;
    padding-bottom: 128px;
}

/* Top Bar and Intro */

header {
    font-family: MesloLGS, monospace;
    position: -webkit-sticky; /* Safari */
    position: sticky;
    top: 0;
    width: 100%;
    margin: 0;
    margin-bottom: 32px;
    padding: 16px;
    box-sizing: border-box;
    text-align: center;
    font-weight: bold;
    font-size: 200%;
    color: var(--my-green);
    background-color: var(--dark-blue);
    z-index: 100;
}

/* Image Layout and Delimiters */

hr {
    border: 1px dashed #404040;
}

.selfie {
    max-width: 15%;
    height: auto;
    border: 8px;
    margin-right: 10%;
}

/* Main Body Styling */

.content {
    display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
    display: flex;
    flex-direction: row;
    min-width: 100%;
}

.strike {
    text-decoration: line-through;
}

a {
    color: var(--my-green);
    text-decoration: none;
}

h1 {
    font-family: MesloLGS, monospace;
    background-color: var(--dark-teal);
    position: relative;
    width: 100%;
    margin: 0;
    text-align: center;
    font-weight: bold;
    font-size: 200%;
}

h2 {
    font-family: MesloLGS, monospace;
    background-color: var(--dark-teal);
    position: relative;
    margin-left: 5%;
    margin-right: 5%;
    margin-top: 48px;
    font-size: 200%;
}

p, ul, h3 {
    margin-top: 16px;
    margin-bottom: 16px;
    margin-left: 10%;
    margin-right: 10%;
}

#footnotes {
    margin-left: 2%;
}

li {
    line-height: 150%;
    list-style-type: square;
    list-style-position: outside;
    margin-left: 0%;
}

.tombstone {
    font-family: MesloLGS, monospace;
    background-color: black;
    color: var(--my-green);
}

/* Bottom of Page */

footer {
    font-family: MesloLGS, monospace;
    position: fixed;
    font-size: 200%;
    min-width: 100%;
    bottom: 0;
    margin: 0;
    padding: 8px;
    box-sizing: border-box; /* Avoid window overflow from padding */
    background-color: var(--dark-blue);
    color: var(--my-green);
    text-align: right;
    /* Flexbox settings */
    display: -webkit-flex; /* NEW - Safari 6.1+. iOS 7.1+, BB10 */
    display: flex;
    flex-direction: row-reverse;
    align-items: center;
}

footer > a > img { /* Logos */
    max-height: 48px;
    width: auto;
    margin: auto;
    margin-left: 8px;
    margin-right: 8px;
}

#cczero {
    border-style: none;
    margin-left: 40px;
    margin-right: 40px;
    height: 31px;
}

